# appcenter-website

./: .gitignore  README.md  certs-traefik.yaml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/local/: devcontainer.json
.devcontainer/remote/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: containers.yml  frontend.yml  rust.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  diesel.toml  generate-openapi.sh  openapi.json  supervisord.conf
backend/background-worker/: Cargo.toml
backend/background-worker/src/: lib.rs  main.rs
backend/background-worker/src/tasks/: appdata_update.rs  mod.rs  submit_app_update.rs  versions_from_repo.rs
backend/common/: Cargo.toml
backend/common/src/: lib.rs  schema.rs  settings.rs  telemetry.rs
backend/common/src/models/: component_summary.rs  db.rs  mod.rs  stripe.rs
backend/crates/appstream-worker/: Cargo.toml
backend/crates/appstream-worker/src/: appstream_collection_sorters.rs  appstream_version_utils.rs  appstream_worker.rs  component_versioning.rs  lib.rs  redis_utils.rs
backend/crates/git-worker/: Cargo.toml
backend/crates/git-worker/src/: git_utils.rs  git_worker.rs  lib.rs
backend/crates/github-utils/: Cargo.toml
backend/crates/github-utils/src/: github_utils.rs  lib.rs
backend/migrations/: 20230428193146_users_table.down.sql  20230428193146_users_table.up.sql  20230509180947_apps_table.down.sql  20230509180947_apps_table.up.sql  20230509210651_users_add_github_id.down.sql  20230509210651_users_add_github_id.up.sql  20230509222216_apps_add_github_id.down.sql  20230509222216_apps_add_github_id.up.sql  20230510122828_users_add_github_tokens.down.sql  20230510122828_users_add_github_tokens.up.sql  20230513185126_app_owners_table.down.sql  20230513185126_app_owners_table.up.sql
backend/migrations/2023-05-18-112743_create_users/: down.sql  up.sql
backend/migrations/2023-05-18-145646_create_apps/: down.sql  up.sql
backend/migrations/2023-05-18-154936_create_github_auth/: down.sql  up.sql
backend/migrations/2023-05-20-055739_create_fang_tasks/: down.sql  up.sql
backend/migrations/2023-05-23-164319_apps_add_published_column/: down.sql  up.sql
backend/migrations/2023-05-28-120330_add_stripe_account_links/: down.sql  up.sql
backend/migrations/2023-05-29-195159_add_stripe_id_to_app/: down.sql  up.sql
backend/settings/: base.yaml  development.yaml  production.yaml
backend/src/: appstream_worker.rs  lib.rs  main.rs  models.rs  openapi.rs  schema.rs  settings.rs  startup.rs  telemetry.rs
backend/src/extractors/: authed_user.rs  mod.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/apps/: all_ids.rs  get.rs  mod.rs  recently_added.rs  recently_updated.rs  register.rs  submit.rs  submit_app.rs
backend/src/routes/apps/examples/: all_ids.json
backend/src/routes/dashboard/: apps.rs  create_stripe_account.rs  enable_app_payments.rs  link_stripe_account.rs  mod.rs  setup_stripe_connect.rs  stripe_account.rs  submit_app_update.rs
backend/src/routes/payments/: mod.rs  start.rs
backend/src/routes/users/: confirm_registration.rs  github_callback.rs  github_login.rs  login.rs  logout.rs  mod.rs  register.rs  test_auth.rs
backend/src/types/: dashboard.rs  general.rs  mod.rs  payments.rs  users.rs
backend/src/utils/: db_test.rs  emails.rs  mod.rs  stripe_test.rs
backend/src/utils/auth/: check_auth.rs  mod.rs  password.rs  tokens.rs
backend/templates/: verification_email.html
backend/tests/: create_app.rs  get_repo_from_db.rs
backend/tests/common/: mod.rs
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  README.md  i18next-parser.config.js  i18next-parser.config.ts  lint-staged.config.js  middleware.ts  mocks.config.js  next-i18next.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.husky/: pre-commit
frontend/app/: globals.css  schema.d.ts  swrFetcher.ts
frontend/app/[lang]/: layout.tsx  page.tsx
frontend/app/[lang]/app/[id]/: layout.tsx  page.tsx
frontend/app/[lang]/dashboard/: page.tsx
frontend/app/[lang]/login/: page.tsx
frontend/app/[lang]/register/: page.tsx
frontend/app/i18n/: client.ts  index.ts  settings.ts
frontend/app/i18n/locales/de/: login.json  register.json
frontend/app/i18n/locales/en/: login.json  register.json  server.json
frontend/app/i18n/locales/fr/: login.json  server.json
frontend/components/: app_summary_button.tsx  header.tsx  layout.tsx  textbox.tsx
frontend/components/AddAppPopoverButton/: index.tsx
frontend/components/AppSummaryButton/: index.tsx
frontend/components/Header/: index.tsx
frontend/components/ImageCarousel/: index.tsx
frontend/components/PayWhatYouWantButton/: index.tsx
frontend/components/ProfileButton/: index.tsx
frontend/components/SubmitAppUpdateButton/: index.tsx
frontend/components/TextBox/: index.tsx
frontend/context/: user.tsx
frontend/lib/: getStatic.js  languageDetector.js  redirect.js
frontend/mocks/: collections.js  handlers.ts  index.ts
frontend/mocks/data/: io.github.danirabbit.nimbus.json  recently_added.json  recently_updated.json
frontend/mocks/files/: com.github.phase1geo.minder.json
frontend/mocks/openapi/: loader.js
frontend/mocks/routes/: static-files.js
frontend/pages/: _app.tsx  index.tsx
frontend/pages/[locale]/: index.tsx
frontend/pages/[locale]/app/: index.tsx
frontend/pages/[locale]/dashboard/: index.tsx
frontend/pages/[locale]/login/: index.tsx
frontend/pages/[locale]/register/: index.tsx
frontend/pages/app/: index.tsx
frontend/public/locales/en/: common.json  register_old.json
frontend/public/locales/it/: common.json  register_old.json
frontend/styles/: globals.css
