[package]
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[workspace]
members = [
    "background-worker",
    "common",
    "crates/appstream-worker",
    "crates/git-worker",
    "crates/github-utils",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[[bin]]
path = "src/openapi.rs"
name = "openapi"

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4"
anyhow = "1.0.71"
appstream-worker = { path = "crates/appstream-worker" }
argon2 = "0.5.0"
background-worker = { path = "background-worker" }
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
common = { path = "common" }
deadpool-redis = "0.12.0"
diesel = { version = "2.0.4", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.2.2", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
github-utils = { path = "crates/github-utils" }
hex = "0.4.3"
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.32.1", features = ["source"] }
oauth2 = "4.3.0"
once_cell = "1.17.1"
pasetors = "0.6.6"
reqwest = { version = "0.11.18", features = ["json"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
serde_variant = "0.1.2"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
url = "2.3.1"
utoipa = { version = "3.3.0", features = ["actix_extras"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }

[dev-dependencies]
async-once-cell = "0.5.2"
