[package]
authors = ["David Hewitt <davidmhewitt@gmail.com>"]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[workspace]
members = [
    "background-worker",
    "common",
    "crates/appstream-worker",
    "crates/git-worker",
    "crates/github-utils",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[[bin]]
path = "src/openapi.rs"
name = "openapi"

[features]
default = ["cors"]
cors = ["dep:actix-cors"]
openapi = ["dep:utoipa", "common/openapi"]

[dependencies]
actix-cors = { version = "0.6", optional = true }
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = "4"
anyhow = "1.0"
argon2 = "0.5"
background-worker = { path = "background-worker" }
base64 = "0.21"
common = { path = "common" }
deadpool-redis = "0.12"
diesel = { version = "2.1", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.3", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
github-utils = { path = "crates/github-utils" }
hex = "0.4"
lettre = { version = "0.10", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "0.32", features = ["source"] }
oauth2 = "4.4"
once_cell = "1.17"
pasetors = "0.6"
reqwest = { version = "0.11", features = ["json"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_variant = "0.1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
url = "2.3"
utoipa = { version = "3.3", features = ["actix_extras"], optional = true}
uuid = { version = "1.3", features = ["v4", "serde"] }

[dev-dependencies]
async-once-cell = "0.5"
