[package]
name = "background-worker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "background-worker"

[dependencies]
appstream-worker = { path = "../crates/appstream-worker" }
common = { path = "../common" }
ctrlc = { version = "3.3.0", features = ["termination"] }
diesel = { version = "2.0.4", features = ["r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
fang = "0.10.3"
git-worker = { path = "../crates/git-worker" }
github-utils = { path = "../crates/github-utils" }
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.163"
serde_json = "1.0.96"
tokio = "1.28.1"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["serde"] }
