[package]
name = "background-worker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "background-worker"

[dependencies]
appstream-worker = { path = "../crates/appstream-worker" }
common = { path = "../common" }
ctrlc = { version = "3.4", features = ["termination"] }
diesel = { version = "2.1", features = ["r2d2"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
fang = "0.10"
git-worker = { path = "../crates/git-worker" }
github-utils = { path = "../crates/github-utils" }
once_cell = "1.17"
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.28"
tracing = "0.1"
uuid = { version = "1.3", features = ["serde"] }
