[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["yaml"], default-features = false }
diesel = { version = "2.0.4", features = ["time", "postgres", "uuid"] }
dotenv = "0.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
time = { version = "0.3.21", features = ["serde"] }
uuid = "1.3.3"
tracing = "0.1.37"
utoipa = "3.3.0"
serde_json = "1.0.96"
appstream = "0.2.2"
