[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openapi = ["dep:utoipa"]

[dependencies]
config = { version = "0.13", features = ["yaml"], default-features = false }
diesel = { version = "2.1", features = ["time", "postgres", "uuid"] }
dotenv = "0.15"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
time = { version = "0.3", features = ["serde"] }
uuid = "1.4"
tracing = "0.1"
utoipa = {version = "4.0", optional = true }
serde_json = "1.0"
appstream = "0.2"
