[package]
name = "appstream-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appstream = { version = "0.2.2", features = ["gzip"] }
cacache = { version = "11.6.0", features = ["tokio", "tokio-runtime", "tokio-stream"], default-features = false }
common = { path = "../../common" }
redis = "0.23.0"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"

[dev-dependencies]
wiremock = "0.5.18"
