[package]
name = "appstream-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
appstream = { version = "0.2", features = ["gzip"] }
common = { path = "../../common" }
http-cache-reqwest = "0.11"
redis = "0.23"
reqwest = { version = "0.11", features = ["stream"] }
reqwest-middleware = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2"
wiremock = "0.5"
