[package]
name = "git-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
git2 = "0.17.1"
octocrab = "0.21.0"
secrecy = "0.8.0"
tempfile = "3"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
