[package]
name = "git-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
common = { path = "../../common" }
git2 = "0.17.1"
secrecy = "0.8.0"
serde = "1.0.163"
serde_json = "1.0.96"
tempfile = "3"
thiserror = "1.0.40"
time = "0.3.21"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
