[package]
name = "git-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
common = { path = "../../common" }
git2 = "0.17"
secrecy = "0.8"
serde = "1.0"
serde_json = "1.0"
tempfile = "3"
thiserror = "1.0"
time = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.29", features = ["macros"] }
